# Vue-anchor-boilerplate

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/vue-anchor-boilerplate/: Cargo.toml
programs/vue-anchor-boilerplate/src/: lib.rs
tests/: vue-anchor-boilerplate.ts
